fixed a bug where the page could shift to the right

--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -249,6 +249,10 @@
     margin-left: 25%;
     width: 500px;
   }
+
+  .animasi-text{
+    min-width: 180px;
+  }
 }
 
 @media screen and (max-width: 900px){  
